cambio de iconos actividad actngresosmensuales

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#090166"
+        android:endColor="#9c2e3f7d"
+        android:startColor="#81b4c7"
         android:type="linear" />
 </shape>
